--- a/SbizLibrary/SbizLibrary.csproj
+++ b/SbizLibrary/SbizLibrary.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -46,6 +47,7 @@
     <Compile Include="SbizBasic.cs" />
     <Compile Include="SbizMessage.cs" />
     <Compile Include="SbizConf.cs" />
+    <Compile Include="SbizMouseEventArgs.cs" />
     <Compile Include="SbizQueue.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
