--- a/SbizLibrary/SbizLibrary.csproj
+++ b/SbizLibrary/SbizLibrary.csproj
@@ -44,7 +44,7 @@
     <Compile Include="SbizLogger.cs" />
     <Compile Include="SbizModelChanged.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SbizBasic.cs" />
+    <Compile Include="SbizNetUtils.cs" />
     <Compile Include="SbizMessage.cs" />
     <Compile Include="SbizConf.cs" />
     <Compile Include="SbizMouseEventArgs.cs" />
