--- a/SbizLibrary/SbizLibrary.csproj
+++ b/SbizLibrary/SbizLibrary.csproj
@@ -39,12 +39,8 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsInput">
-      <HintPath>InputSimulator\WindowsInput.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SbizInputSimulator.cs" />
     <Compile Include="SbizLogger.cs" />
     <Compile Include="SbizModelChanged.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -53,6 +49,12 @@
     <Compile Include="SbizConf.cs" />
     <Compile Include="SbizMouseEventArgs.cs" />
     <Compile Include="SbizQueue.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="WindowsInput\WindowsInput.csproj">
+      <Project>{3549cd6f-80f8-450f-b99e-cf0a736b1f2a}</Project>
+      <Name>WindowsInput</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
