--- a/SbizLibrary/SbizLibrary.csproj
+++ b/SbizLibrary/SbizLibrary.csproj
@@ -44,6 +44,7 @@
     <Compile Include="NativeImport.cs" />
     <Compile Include="SbizClipboardHandler.cs" />
     <Compile Include="SbizLogger.cs" />
+    <Compile Include="SbizMessager.cs" />
     <Compile Include="SbizModelChanged.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SbizNetUtils.cs" />
